<resources>
    <string name="app_name">Fake call</string>
    <string name="intro1_title">Easily create fake calls</string>
    <string name="intro2_title">Make call with any Celebrity</string>
    <string name="intro3_title">Provides multiple call templates</string>
    <string name="next">Next</string>
    <string name="language">Language</string>
    <string name="splash_disclaimer">This action may contain advertising</string>
    <string name="easily_create_fake_calls">Easily create fake calls</string>
    <string name="permission">Permission</string>
    <string name="permission_description">Fake call - Prank phone calls\nrequires permission to use location</string>
    <string name="storage">Storage</string>
    <string name="camera_amp_recorder"><![CDATA[Camera & Recorder]]></string>
    <string name="Screen_Premissions">Screen Premissions</string>
    <string name="continue_">Continue</string>
    <string name="addfakecallstring">Provides fun fake calls available to entertain and joke with friends and relatives</string>
    <string name="available_fake_call">Available Fake Call</string>
    <string name="more_fake_call">More</string>
    <string name="more_fake_call_string">Some other suggested options: Change language,\n Rate Us,...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_fake_call">Add Fake Call</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Numeber</string>
    <string name="choose_voice">Choose Voice</string>
    <string name="select_device">Select Device</string>
    <string name="set_time">Set Time</string>
    <string name="talk_time">Talk Time</string>
    <string name="preview">Preview</string>
    <string name="apply">Apply</string>
    <string name="choose_how_long_to_keep_your_call_screen_visible">Choose how long to keep your call screen visible</string>
    <string name="_30_second">30 second</string>
    <string name="_1_minute">1 min</string>
    <string name="_5_minute">5 min</string>
    <string name="_10_minute">10 min</string>
    <string name="save_talk_time">Save</string>
    <string name="_15_second">15 second</string>
    <string name="add_time">Add time</string>
    <string name="min">Min</string>
    <string name="hour">Hour</string>
    <string name="done">Done</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="language_more">Language</string>
    <string name="do_you_like_the_app">Do you like the app?</string>
    <string name="let_us_know_your_experience">Let us know your experience</string>
    <string name="rate">Rate</string>
    <string name="exit">Exit</string>
    <string name="create_a_name_for_the_voice_so_it_can_be_easily_searched_in_the_voice_list">Create a name for the voice so it can be easily searched in the voice list.</string>
    <string name="create_a_name_for_the_addfake">Create a name for the add fake call.</string>
    <string name="create_a_phonenumber_for_the_addfake">Create a phone number for the add fake call.</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="enter_name">Enter name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="create_a_phone_number">Create A Phone Number</string>
    <string name="phone_call_ring_time">Phone Call Ring Time</string>
    <string name="end_the_call_after_the_amount_of_time_you_choose">End the call after the amount of time you choose</string>
    <string name="done_btn">Done</string>
    <string name="the_call_has_ended">The call has ended</string>
    <string name="mute">Mute</string>
    <string name="keypad">Keypad</string>
    <string name="speaker">Speaker</string>
    <string name="contact">Contact</string>
    <string name="add_call">Add Call</string>
    <string name="camera">Camera</string>
    <string name="silent">Silent</string>
    <string name="message">Message</string>
    <string name="return_">Return</string>
    <string name="thank_you_feedback">Thank you for your feedback!</string>
    <string name="please_select_rating">Please select a rating</string>
    <string name="preview_fake_call">Preview: Fake call triggered immediately</string>
    <string name="fake_call_updated">Fake call updated successfully!</string>
    <string name="fake_call_scheduled">Fake call scheduled successfully!</string>
    <string name="please_enter_name">Please enter a name</string>
    <string name="please_enter_phone">Please enter a phone number</string>
    <string name="please_choose_voice">Please choose a voice</string>
    <string name="please_select_device">Please select a device</string>
    <string name="please_set_time">Please set time</string>
    <string name="please_set_talk_time">Please set talk time</string>
    <string name="no_scheduled_calls">There is not scheduled calls here</string>
    <string name="fake_call_triggered">Fake call triggered and moved to history</string>
    <string name="deleted_from_history">%1$s deleted from history</string>
    <string name="undo">UNDO</string>
    <string name="voice_name">Voice:</string>
    <string name="choose_voice_default">Choose Voice</string>
    <string name="select_device_default">Select Device</string>
    <string name="set_time_default">Set Time</string>
    <string name="talk_time_default">Talk Time</string>
    <string name="now">Now</string>
    <string name="failed_save_image">Failed to save image</string>
    <string name="re_triggering_call">Re-triggering fake call from</string>
    <string name="preview_fake_call_triggered_immediately">Preview: Fake call triggered immediately</string>
    <string name="custom">Custom</string>
    <string name="available">Available</string>
    <string name="rating_oh_no">Oh, no!</string>
    <string name="rating_feedback_request">Please give us some feedback</string>
    <string name="rating_could_be_better">Could be better!</string>
    <string name="rating_how_to_improve">How can we improve?</string>
    <string name="rating_love_you">We love you too!</string>
    <string name="rating_thanks">Thanks for your feedback</string>
    <string name="setting">Setting</string>
    <string name="ringtone">Ringtone</string>
    <string name="vibration">Vibration</string>
    <string name="sound">Sound</string>
    <string name="flash">Flash</string>
    <string name="no_call_history_yet">There is not calls here</string>
    <string name="add_your_voice">Add your voice</string>
    <string name="create_a_name">Create a name</string>
    <string name="kid">Kid</string>
    <string name="general">General</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="call_coming">Call coming...</string>
    <string name="history">History</string>
    <string name="select_ring_time">Select Ring Time</string>
    <string name="select_ringtone">Select Ringtone</string>
    <string name="flash_is_not_available_on_this_device">Flash is not available on this device</string>
    <string name="failed_to_set_ringtone">Failed to set ringtone</string>
    <string name="ringtone_updated">Ringtone updated</string>
    <string name="tap_the_button_to_record_audio">tap the button to record audio</string>
    <string name="deleted_">%1$s deleted</string>
    <string name="fake_call_scheduled_successfully">Fake call scheduled successfully!</string>
    <string name="fake_call_updated_successfully">Fake call updated successfully!</string>
    <string name="please_enter_a_name">Please enter a name</string>
    <string name="please_enter_a_phone_number">Please enter a phone number</string>
    <string name="please_choose_a_voice">Please choose a voice</string>
    <string name="please_select_a_device">Please select a device</string>
    <string name="talktime">TalkTime</string>
    <string name="settime">SetTime</string>
    <string name="deletede">%1$s deleted</string>
    <string name="restored">%1$s स्थापित किए गए</string>
    <string name="storage_permission_already_granted">Storage permission already granted</string>
    <string name="camera_recorder_permission_already_granted"><![CDATA[Camera & Recorder permission already granted]]></string>


</resources>