<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SetTime">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:background="@drawable/bg_title_addfakecall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/set_time"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:layout_width="11dp"
            android:layout_height="20dp"
            android:layout_marginStart="23dp"
            android:src="@drawable/ic_arrowback_addfakecall"
            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/choose_how_long_to_keep_your_call_screen_visible"
        android:textColor="#2B2B2B"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutTitle" />

    <ImageView
        android:id="@+id/ivNow"
        android:layout_width="133dp"
        android:layout_height="41dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_enable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />

    <TextView
        android:id="@+id/tvNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/now"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/ivNow"
        app:layout_constraintEnd_toEndOf="@id/ivNow"
        app:layout_constraintStart_toStartOf="@id/ivNow"
        app:layout_constraintTop_toTopOf="@id/ivNow" />

    <ImageView
        android:id="@+id/iv15s"
        android:layout_width="133dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="22dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_disable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />

    <TextView
        android:id="@+id/tv15s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/_15_second"
        android:textColor="#2F2F2F"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/iv15s"
        app:layout_constraintEnd_toEndOf="@id/iv15s"
        app:layout_constraintStart_toStartOf="@id/iv15s"
        app:layout_constraintTop_toTopOf="@id/iv15s" />

    <ImageView
        android:id="@+id/iv30s"
        android:layout_width="133dp"
        android:layout_height="41dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_disable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv15s" />

    <TextView
        android:id="@+id/tv30s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/_30_second"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/iv30s"
        app:layout_constraintEnd_toEndOf="@id/iv30s"
        app:layout_constraintStart_toStartOf="@id/iv30s"
        app:layout_constraintTop_toTopOf="@id/iv30s" />

    <ImageView
        android:id="@+id/iv1m"
        android:layout_width="133dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="22dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_disable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv15s" />

    <TextView
        android:id="@+id/tv1m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/_1_minute"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/iv1m"
        app:layout_constraintEnd_toEndOf="@id/iv1m"
        app:layout_constraintStart_toStartOf="@id/iv1m"
        app:layout_constraintTop_toTopOf="@id/iv1m" />

    <ImageView
        android:id="@+id/iv5m"
        android:layout_width="133dp"
        android:layout_height="41dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_disable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv1m" />

    <TextView
        android:id="@+id/tv5m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/_5_minute"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/iv5m"
        app:layout_constraintEnd_toEndOf="@id/iv5m"
        app:layout_constraintStart_toStartOf="@id/iv5m"
        app:layout_constraintTop_toTopOf="@id/iv5m" />

    <ImageView
        android:id="@+id/iv10m"
        android:layout_width="133dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="22dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_disable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv1m" />

    <TextView
        android:id="@+id/tv10m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/_10_minute"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/iv10m"
        app:layout_constraintEnd_toEndOf="@id/iv10m"
        app:layout_constraintStart_toStartOf="@id/iv10m"
        app:layout_constraintTop_toTopOf="@id/iv10m" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layoutAddTime"
        app:layout_constraintTop_toBottomOf="@id/iv5m"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        >

        <ImageView
            android:id="@+id/ivAddTime"
            android:layout_width="138dp"
            android:layout_height="45dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

             />

        <TextView
            android:id="@+id/tvAddTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/add_time"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/ivAddTime"
            app:layout_constraintStart_toStartOf="@id/ivAddTime"
            app:layout_constraintTop_toTopOf="@id/ivAddTime" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvSave"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/bg_rounded_save_talktime"
        android:gravity="center"
        android:text="@string/save_talk_time"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutAddTime" />


</androidx.constraintlayout.widget.ConstraintLayout>