<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetTime">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:background="@drawable/bg_title_addfakecall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/talk_time"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:layout_width="11dp"
            android:layout_height="20dp"
            android:layout_marginStart="23dp"
            android:src="@drawable/ic_arrowback_addfakecall"
            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_how_long_to_keep_your_call_screen_visible"
        app:layout_constraintTop_toBottomOf="@id/layoutTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="14sp"
        android:textColor="#2B2B2B"
        android:fontFamily="@font/roboto"/>

    <ImageView
        android:id="@+id/iv15s"
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/bg_enable"
        android:layout_marginStart="22dp"/>
    <TextView
        android:id="@+id/tv15s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/iv15s"
        app:layout_constraintEnd_toEndOf="@id/iv15s"
        app:layout_constraintTop_toTopOf="@id/iv15s"
        android:text="15 second"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/iv15s"/>

    <ImageView
        android:id="@+id/iv30s"
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/bg_disable"
        android:layout_marginEnd="22dp"/>
    <TextView
        android:id="@+id/tv30s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/iv30s"
        app:layout_constraintEnd_toEndOf="@id/iv30s"
        app:layout_constraintTop_toTopOf="@id/iv30s"
        android:text="@string/_30_second"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        android:textColor="#2F2F2F"
        app:layout_constraintBottom_toBottomOf="@id/iv30s"/>

    <ImageView
        android:id="@+id/iv1m"
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/iv15s"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/bg_disable"
        android:layout_marginStart="22dp"/>
    <TextView
        android:id="@+id/tv1m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/iv1m"
        app:layout_constraintEnd_toEndOf="@id/iv1m"
        app:layout_constraintTop_toTopOf="@id/iv1m"
        android:text="@string/_1_minute"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        app:layout_constraintBottom_toBottomOf="@id/iv1m"/>

    <ImageView
        android:id="@+id/iv5m"
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/iv30s"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/bg_disable"
        android:layout_marginEnd="22dp"/>
    <TextView
        android:id="@+id/tv5m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/iv5m"
        app:layout_constraintEnd_toEndOf="@id/iv5m"
        app:layout_constraintTop_toTopOf="@id/iv5m"
        android:text="@string/_5_minute"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        app:layout_constraintBottom_toBottomOf="@id/iv5m"/>

    <ImageView
        android:id="@+id/iv10m"
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/iv1m"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/bg_disable"
        android:layout_marginStart="22dp"/>
    <TextView
        android:id="@+id/tv10m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/iv10m"
        app:layout_constraintEnd_toEndOf="@id/iv10m"
        app:layout_constraintTop_toTopOf="@id/iv10m"
        android:text="@string/_10_minute"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        app:layout_constraintBottom_toBottomOf="@id/iv10m"/>

    <TextView
        android:id="@+id/tvSave"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/save_talk_time"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv10m"
        android:layout_marginTop="56dp"
        android:background="@drawable/bg_rounded_save_talktime"/>

</androidx.constraintlayout.widget.ConstraintLayout>