<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="259dp"
    android:layout_height="192dp"
    android:background="@drawable/bg_rounded_corners_white">

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create A Name"
        android:textSize="16sp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Description -->
    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/create_a_name_for_the_voice_so_it_can_be_easily_searched_in_the_voice_list"
        android:textSize="12sp"
        android:fontFamily="@font/roboto"
        android:textColor="#888888"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Input Field -->
    <EditText
        android:id="@+id/etVoiceName"
        android:layout_width="228dp"
        android:layout_height="34dp"
        android:layout_marginTop="18dp"
        android:hint="@string/enter_name"
        android:scaleType="fitXY"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        android:background="@drawable/frame_create_name"
        android:paddingHorizontal="15.5dp"
        android:textColor="#000000"
        android:textColorHint="#2F2F2F"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="15dp"
        android:gravity="start|center_vertical"
        app:layout_constraintTop_toBottomOf="@id/etVoiceName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Cancel Button -->
        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:text="@string/cancel"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto"
            android:textColor="#666666"
            android:background="@drawable/bg_createname_already_cancel"
            android:paddingHorizontal="16dp"
            style="?android:attr/borderlessButtonStyle" />

        <!-- OK Button -->
        <TextView
            android:id="@+id/btnOk"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:text="@string/ok"
            android:textSize="14sp"
            android:fontFamily="@font/roboto"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_rounded_save_talktime"
            android:gravity="center"
            android:layout_gravity="right"
            android:layout_marginStart="28dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>